<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openmrs.module</groupId>
    <artifactId>emr</artifactId>
    <version>2.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>EMR Module</name>
    <description>An EMR that runs on top of the OpenMRS platform</description>
    <url>https://wiki.openmrs.org/display/docs/EMR+Module+Module+Module</url>

    <developers>
        <developer>
            <name>Partners In Health</name>
        </developer>
    </developers>

    <organization>
        <name>Partners In Health</name>
        <url>http://pih.org</url>
    </organization>

    <scm>
        <connection>scm:git:git@github.com:PIH/openmrs-module-emr.git</connection>
        <developerConnection>scm:git:git@github.com:PIH/openmrs-module-emr.git</developerConnection>
        <url>scm:git:git@github.com:PIH/openmrs-module-emr.git</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>api</module>
        <module>omod</module>
    </modules>

    <properties>
        <openMRSVersion>1.9.4-SNAPSHOT</openMRSVersion>
        <emrapiVersion>1.0-SNAPSHOT</emrapiVersion>
        <paperrecordVersion>1.0-SNAPSHOT</paperrecordVersion>
        <uiframeworkVersion>2.5.2-SNAPSHOT</uiframeworkVersion>
        <appframeworkVersion>2.0-SNAPSHOT</appframeworkVersion>
        <idgenVersion>2.4</idgenVersion>
        <htmlformentryVersion>2.1-SNAPSHOT</htmlformentryVersion>
        <providerManagementVersion>1.1.4-SNAPSHOT</providerManagementVersion>
        <metadatasharingVersion>1.1.7.1</metadatasharingVersion>
        <reportingVersion>0.7.5</reportingVersion>
        <calculationVersion>1.0</calculationVersion>
        <serializationxstreamVersion>0.2.7</serializationxstreamVersion>
        <springVersion>3.0.5.RELEASE</springVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

	<dependencyManagement>
    
    <dependencies>

        <!-- Begin OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <!-- annoyingly needed to access address support class -->
        <dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <version>${openMRSVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <version>${openMRSVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.test</groupId>
            <artifactId>openmrs-test</artifactId>
            <version>${openMRSVersion}</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>

        <!-- End OpenMRS core -->

        <!-- Begin OpenMRS modules -->
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>paperrecord-api</artifactId>
            <version>${paperrecordVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uiframework-api</artifactId>
            <version>${uiframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appframework-api</artifactId>
            <version>${appframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen</artifactId>
            <version>${idgenVersion}</version>
            <type>pom</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen-api</artifactId>
            <version>${idgenVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>providermanagement-api</artifactId>
            <version>${providerManagementVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
            <version>${reportingVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>calculation-api</artifactId>
            <version>${calculationVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>

        <!-- OpenMRS modules required for testing -->
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatasharing-api</artifactId>
            <version>${metadatasharingVersion}</version>
            <scope>test</scope>
        </dependency>

        <!-- End OpenMRS modules -->

        <!-- start other dependencies -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>13.0.1</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.2</version>
        </dependency>

        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>1.5</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.9.0</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>1.5</version>
			<scope>test</scope>
		</dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <version>${springVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${springVersion}</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
			<scope>test</scope>
		</dependency>

        <!-- end other dependencies -->

    </dependencies>

	</dependencyManagement>
	
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <target>1.6</target>
                        <source>1.6</source>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openmrs.maven.plugins</groupId>
                    <artifactId>maven-openmrs-plugin</artifactId>
                    <version>1.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.3.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.jasig.maven</groupId>
                    <artifactId>sass-maven-plugin</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <sassSourceDirectory>${basedir}/src/main/webapp</sassSourceDirectory>
                        <outputDirectory>${basedir}/src/main/webapp/resources/styles</outputDirectory>
                        <baseOutputDirectory>${basedir}/src/main/webapp/resources/styles</baseOutputDirectory>
                        <skin>scss</skin>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>de.saumya.mojo</groupId>
                    <artifactId>gem-maven-plugin</artifactId>
                    <version>0.28.6</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <includes>
                            <include>**/*Test.java</include>
                        </includes>
                        <argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
        </repository>
        <!-- <repository>
             <id>rubygems-releases</id>
             <url>http://rubygems-proxy.torquebox.org/releases</url>
         </repository>-->
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>


    <distributionManagement>
        <repository>
            <id>openmrs-repo-modules</id>
            <name>OpenMRS Modules</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules</url>
        </repository>
        <snapshotRepository>
            <id>openmrs-repo-snapshots</id>
            <name>OpenMRS Snapshots</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
